--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Written by [Cody Lindley](http://codylindley.com/) sponsored by — [Frontend Masters](https://frontendmasters.com/)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "honkit build",
+    "serve": "honkit serve"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-react": "^4.3.0",
     "eslint-plugin-standard": "^1.3.2",
-    "gitbook-plugin-jsfiddle": "^1.0.0"
+    "gitbook-plugin-jsfiddle": "^1.0.0",
+    "honkit": "^4.0.4"
   }
 }
