--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Written by [Cody Lindley](http://codylindley.com/) sponsored by — [Frontend Masters](https://frontendmasters.com/)",
   "main": "index.js",
   "scripts": {
-    "build": "honkit build",
-    "serve": "honkit serve"
+    "start": "honkit serve",
+    "build": "honkit build"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,12 @@
   },
   "homepage": "https://github.com/FrontendMasters/react-enlightenment#readme",
   "devDependencies": {
-    "eslint": "^2.7.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-react": "^4.3.0",
-    "eslint-plugin-standard": "^1.3.2",
-    "gitbook-plugin-jsfiddle": "^1.0.0",
-    "honkit": "^4.0.4"
+    "eslint": "^8.45.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-standard": "^4.1.0",
+    "gitbook-plugin-jsfiddle": "^1.0.3",
+    "honkit": "^5.0.0"
   }
 }
